<resources>
    <string name="app_name">Cloud Mood</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Cloud Mood</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_alert">Alert</string>
    <string name="menu_favourite">Favourite</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery" />
    <string name="menu_slideshow" />
    <string name="menu_settings">Settings</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>

    <string name="temperature">Temperature</string>
    <string name="kelvin">Kelvin</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>

    <string name="language">Language</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>

    <string name="location">Location</string>
    <string name="map">Map</string>
    <string name="gps">GPS</string>

    <string name="notification">Notification</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>

    <string name="wind_speed">Wind Speed</string>
    <string name="mile_hour">Mile/hour</string>
    <string name="meter_sec">Meter/sec</string>
    <string name="city_name">City Name</string>
    <string name="clear_sky">Clear sky</string>
    <string name="get_location">Get Location</string>
    <string name="cairo">Cairo</string>
    <string name="monday">Monday</string>
    <string name="rain_showers">Rain Showers</string>
    <string name="weatherapp_would_like_to_access_your_location">WeatherApp Would Like to Access Your Location</string>
    <string name="location_is_used_to_provide_local_weather_info_this_can_be_changed_in_settings">Location is used to provide local weather info. This can be changed in Settings.</string>
    <string name="manual">Manual</string>
    <string name="gps_">GPS</string>
    <string name="youoffline">You\'re offline</string>
    <string name="unknown">unknown</string>
    <string name="GPSpermissiongranted">GPSpermissiongranted</string>
    <string name="GPSpermissiondenied">GPSpermissiondenied</string>
    <string name="UpdatinglocationfromGPS">UpdatinglocationfromGPS</string>
    <string name="Location">Location</string>
    <string name="Failedtogetlocation">Failedtogetlocation</string>
    <string name="Locationunavailable">Locationunavailable</string>
    <string name="home">home</string>
    <string name="favourite">favourite</string>
    <string name="alert">alert</string>
    <string name="settings">settings</string>
    <string name="Errorgettinglocation">Errorgettinglocation</string>

    <!-- Temperature options -->
    <string-array name="temperature_options">
        <item>Kelvin</item>
        <item>Celsius</item>
        <item>Fahrenheit</item>
    </string-array>

    <!-- Language options -->
    <string-array name="language_options">
        <item>Arabic</item>
        <item>English</item>
    </string-array>

    <!-- Location options -->
    <string-array name="location_options">
        <item>Map</item>
        <item>GPS</item>
    </string-array>

    <!-- Notification options -->
    <string-array name="notification_options">
        <item>Enabled</item>
        <item>Disabled</item>
    </string-array>

    <!-- Wind speed options -->
    <string-array name="wind_speed_options">
        <item>Mile/hour</item>
        <item>Meter/sec</item>
    </string-array>



</resources>