<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home"
            app:itemIconTint="@null" />
        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/heart"
            android:title="@string/menu_favourite"
            app:itemIconTint="@null" />
        <item
            android:id="@+id/nav_alert"
            android:icon="@drawable/notification"
            android:title="@string/menu_alert"
            app:itemIconTint="@null" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/menu_settings"
            app:itemIconTint="@null" />
    </group>
</menu>
