<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.weatherapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_favourite"
        android:name="com.example.weatherapp.ui.favourite.FavouriteFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_favourite" />

    <fragment
        android:id="@+id/nav_notification"
        android:name="com.example.weatherapp.ui.notification.NotificationFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_notification" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.weatherapp.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>