<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/snackbar_background"
    android:orientation="vertical"
    android:padding="24dp"
    android:elevation="6dp">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weatherapp_would_like_to_access_your_location"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/messageText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/location_is_used_to_provide_local_weather_info_this_can_be_changed_in_settings"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textColor="#666666" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnDeny"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/manual"
            android:textColor="@android:color/holo_red_dark"
            android:background="@android:color/transparent" />

        <Button
            android:id="@+id/btnAllow"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/gps_"
            android:textColor="@android:color/holo_blue_dark"
            android:background="@android:color/transparent" />
    </LinearLayout>
</LinearLayout>
